# Feishu-GitHub-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.example.toml
deploy/: docker-compose.yml
src/: binding.rs  cards.rs  config.rs  handlers.rs  main.rs  sla.rs  state.rs  store.rs
src/feishu/: bitable.rs  callback.rs  im.rs  mod.rs  task.rs  token.rs
src/github/: events.rs  issues.rs  mod.rs  verify.rs  workflow.rs
