[package]
name = "feishu-github-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
subtle = "2"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"
# 飞书事件订阅可选 AES-256-CBC 加密解密
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
base64 = "0.22"
